fix: align items on recipe section of adobo page

--- a/css/chicken_adobo.css
+++ b/css/chicken_adobo.css
@@ -84,8 +84,14 @@ img.dishPng {
 }
 
 p.descText {
-    width: 32%;
+    width: 50%;
     text-align: center;
+}
+
+.recipeSection {
+    display: flex;
+    align-self: center;
+    gap: 48px;
 }
 
 .ingredientSection {
@@ -98,18 +104,14 @@ h2.ingredientsTitle {
     text-align: center;
 }
 
-ul.ingredientsList {
-    -webkit-columns: 2;
-    margin-right: 28px;
-    width: 500px;
-}
-
 .stepSection {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 ol.stepsList {
-    width: 800px;
+    height: 230px;
+    width: 1100px;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 48px;
 }
